updated structure & styles

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.js"
+      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+      crossorigin="anonymous"
+    ></script>
     <title>Hidden Searchbar</title>
   </head>
 
@@ -22,6 +27,13 @@
       <button class="btn">
         <i class="fas fa-search"></i>
       </button>
+    </div>
+
+    <div class="quote-container">
+      <div class="quote-card">
+        <p class="quote" id="quote"></p>
+        <small class="author" id="author"></small>
+      </div>
     </div>
 
     <script src="app.js"></script>
